# peatland-time-series

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
bourgault/: sy.py
peatland_time_series/: __init__.py  filter.py  sy.py  time_series.py  util.py  visualization.py
tests/: test_filter.py  test_sy.py  test_time_series.py
tests/data/: expected_results.csv  kmr_area_c.csv  sy-bad.csv  sy.csv
tests/data/time_series/time_series/: bad-time-series.csv
tests/data/time_series/time_series/ahlenmoor/: ahlenmoor_af_naturnah_sp.csv  ahlenmoor_af_seepegel.csv  ahlenmoor_af_siteam4.csv  ahlenmoor_af_siteam5.csv  ahlenmoor_af_siteam6.csv  ahlenmoor_af_suedpegel.csv
