[tool.poetry]
name = "peatland_time_series"
version = "0.1.6"
description = "Analyze water retention in peatland from time series of precipitation and water table depth"
authors = ["Gabriel Couture <gacou54@ulaval.ca>"]
license = "BSD-3-Clause"
homepage = "https://github.com/ulaval-rs/peatland-time-series"
readme = "README.md"
keywords = ["text"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
matplotlib = "^3.5.1"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
